--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta property="og:description" content="Just a simple hub for my social networks" />
 	  <meta property="og:url" content="http://alex-funk.net/" />	
-    <link href='http://fonts.googleapis.com/css?family=Rancho' rel='stylesheet' type='text/css'>
 	  <link rel="stylesheet" type="text/css" href="css/main.css">
 		<title>Alex Funk</title>
 	</head>
@@ -18,14 +17,8 @@
 		<div class="card">
 			<h1>Alex Funk</h1>
 			<p>
-				<a id="twitter" title="Twitter" href="http://twitter.com/#!/Snicked">
-				<img src="social/flat/twitter.png" alt="Twitter" />
-				</a>
 				<a id="email" title="Send Me a Mail!" data-mail="contact[at]alex-funk[dot]net" href="#">
 				<img src="social/flat/email.png" alt="Email" />
-				</a>
-				<a id="googleplus" title="Google+" href="https://plus.google.com/u/0/101510225739089414481/">
-				<img src="social/flat/google+.png" alt="Google+" />
 				</a>
 			</p>
 			<strong>Internet Superhero</strong>
@@ -33,13 +26,10 @@
 		</div>
 		<div class="credits">
 		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			$(document).ready( function() {
-				var mail = $("#email").data("mail");
-				mail = mail.replace('[dot]','.').replace('[at]','@')
-				$("#email").attr("href", "mailto:"+mail);
-			});
+			var mail=document.getElementById("email");
+			var mailStr=document.getElementById("email").dataset.mail.replace('[dot]','.').replace('[at]','@')
+			mail.href="mailto:"+mailStr;
 		</script>
 	</body>
 </html>
