--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="card">
 			<h1>Alex Funk</h1>
 			<p>
-				<a id="email" title="Send Me a Mail!" data-mail="contact[at]alex-funk[dot]net" href="#">
+				<a id="email" title="contact" data-mail="contact[at]alex-funk[dot]net" href="#">
 				<img src="social/flat/email.png" alt="Email" />
 				</a>
 			</p>
